plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.7'
    // 개틀링 부하 테스트
    id 'io.gatling.gradle' version '3.13.5'
    // docker-compose 플러그인 (빌드시 자동 실행)
    id 'com.avast.gradle.docker-compose' version '0.17.5'
}

group = 'com.dogcat'
version = ''

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
    implementation 'org.springframework.security:spring-security-config'
    implementation 'org.springframework.security:spring-security-web'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 임시 비밀번호 발급을 위한 메일
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB

    //OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // slf4j
    implementation 'org.springframework.boot:spring-boot-starter-logging'

    // swagger ui
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
    implementation 'net.coobird:thumbnailator:0.4.16'

    // 파일 업로드
    implementation 'commons-io:commons-io:2.17.0'

    //ModelMapper
    implementation('org.modelmapper:modelmapper:3.1.0')

    //gson
    implementation 'com.google.code.gson:gson:2.8.9'

    //jjwt
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    //jwt 테스트시 에러, java9부터 삭제된 javax.xml.bind.DatatypeConverter
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
    testImplementation 'javax.xml.bind:jaxb-api:2.3.1'
    testImplementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //Querydsl
    implementation 'com.querydsl:querydsl-jpa'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //AWS S3, 섬네일
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    // implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
    implementation 'net.coobird:thumbnailator:0.4.16'
    // mockMultipartFile
    implementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    // 부하테스트
    implementation 'org.scala-lang:scala3-library_sjs1_3:3.5.2'
    // Gatling
    gatlingRuntimeOnly 'io.gatling:gatling-core'
    gatlingRuntimeOnly 'io.gatling:gatling-http'
    gatlingImplementation 'io.netty:netty-codec-http:4.1.119.Final'
    gatlingImplementation 'io.netty:netty-handler:4.1.119.Final'
    testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.13.5'
    testImplementation 'io.gatling:gatling-test-framework:3.12.0'
    gatlingRuntimeOnly platform('com.fasterxml.jackson:jackson-bom:2.18.3')
    gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-core:2.18.3'
    gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
    gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
    gatlingImplementation 'io.gatling:gatling-core-java:3.13.5'
    gatlingImplementation 'io.gatling:gatling-http-java:3.13.5'
    implementation 'io.gatling:gatling-core-java:3.13.5'
    implementation 'io.gatling:gatling-http-java:3.13.5'

    // redis 적용
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis' // 세션 관리용
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.15.2'
    // 썸네일레이터 보다 더 가벼움?
    implementation 'org.imgscalr:imgscalr-lib:4.2'
}

gatling {
    jvmArgs = ['-Xms4g',
               '-Xmx8g',
               '--add-opens=java.base/java.lang=ALL-UNNAMED',
               '--add-opens=java.base/java.nio=ALL-UNNAMED',
               '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
               '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
               '--add-opens=java.base/java.util=ALL-UNNAMED',
               '--add-opens=java.base/java.text=ALL-UNNAMED']
}


test {
    useJUnitPlatform()
}

processResources.dependsOn('copyYml')
tasks.register('copyYml', Copy) {
    from "${projectDir}/Secret-DogCat/Dev"
    include 'application-improve*.yml'    // -improve 가 붙은 파일만
    exclude 'application-backup.yml'      // 백업 파일은 제외
    into 'src/main/resources'

    rename { String fileName ->
        if (fileName == 'application-improve.yml') {
            return 'application.yml'
        }
        def m = fileName =~ /application-improve-u-(.*)\.yml/
        if (m.matches()) {
            return "application-${m[0][1]}.yml"
        }
    }
}
//processResources.dependsOn('copyYml')
//tasks.register('copyYml', Copy) {
//    from './Secret-DogCat/Dev'
//    include "*-improve.yml"  // 복사할 파일들
//    into 'src/main/resources'  // 복사 위치
//    rename('application-improve.yml', 'application-backup.yml')
//}

// docker
processResources.dependsOn('copyDockerYml')
tasks.register('copyDockerYml') {
    // 증분 빌드나 상태 추적이 전혀 없으니, .gradle 캐시 파일 충돌 걱정 없이 무조건 복사
    doLast {
        project.copy {
            from 'Secret-DogCat/Docker'
            include '*.yml'
            into project.rootDir   // 루트에 바로 복사
        }
    }
}

//  TODO 배포시 활성화
//processResources.dependsOn('copySecret')
//
//tasks.register('copySecret', Copy) {
//    from './Secret-DogCat/EC2'
//    include "application-backup.yml"  // 복사할 파일들
//    into 'src/main/resources'  // 복사 위치
//}
